--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,10 @@
 AccessType = OnPremise
 SignOfLifeLog = 1
 Deviceinstance=41
-CustomName=SUN-2000_GTIL
+CustomName=Test
 Phase=L3
 
 [ONPREMISE]
-Host=192.168.178.146
+Host=192.168.188.90
 Username=
 Password=
